# huggingface-datasets_livedoor-news-corpus

./: README.md  livedoor-news-corpus.py  livedoor_news_corpus.py  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: livedoor_news_corpus_test.py
