[tool.poetry]
name = "huggingface-datasets-livedoor-news-corpus"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
datasets = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
